# purec

./: .gitignore  2025_01_24_04.txt  2025_01_24_05.txt  2025_01_26_03.txt  2025_01_26_04.txt  2025_01_27_03.txt  2025_01_27_04.txt  2025_01_27_05.txt  2025_02_01_05.txt  README.md  readme.txt
Meta-OpenXR-SDK/: .gitignore  CMakeLists.txt  build.gradle
Meta-OpenXR-SDK/Samples/: CMakeLists.txt  settings.gradle.kts
Meta-OpenXR-SDK/Samples/SampleXrFramework/: CMakeLists.txt
Meta-OpenXR-SDK/Samples/SampleXrFramework/Src/: XrApp.h  anag.c
Meta-OpenXR-SDK/Samples/XrSamples/XrBodyFaceEyeSocial/: CMakeLists.txt
Meta-OpenXR-SDK/Samples/XrSamples/XrColocationDiscovery/: CMakeLists.txt
Meta-OpenXR-SDK/Samples/XrSamples/XrColorSpaceFB/: CMakeLists.txt
Meta-OpenXR-SDK/Samples/XrSamples/XrCompositor_NativeActivity/Src/: XrCompositor_NativeActivity.c  anag.h
Meta-OpenXR-SDK/Samples/XrSamples/XrControllers/: CMakeLists.txt
Meta-OpenXR-SDK/Samples/XrSamples/XrDynamicObjects/: CMakeLists.txt
Meta-OpenXR-SDK/Samples/XrSamples/XrHandDataSource/: CMakeLists.txt
Meta-OpenXR-SDK/Samples/XrSamples/XrHandTrackingWideMotionMode/: CMakeLists.txt
Meta-OpenXR-SDK/Samples/XrSamples/XrHandsAndControllers/: CMakeLists.txt
Meta-OpenXR-SDK/Samples/XrSamples/XrHandsFB/: CMakeLists.txt
Meta-OpenXR-SDK/Samples/XrSamples/XrInput/: CMakeLists.txt
Meta-OpenXR-SDK/Samples/XrSamples/XrKeyboard/: CMakeLists.txt
Meta-OpenXR-SDK/Samples/XrSamples/XrMicrogestures/: CMakeLists.txt
Meta-OpenXR-SDK/Samples/XrSamples/XrPassthrough/Src/: XrPassthrough.cpp  XrPassthroughInput.cpp
Meta-OpenXR-SDK/Samples/XrSamples/XrPassthroughOcclusion/Src/: XrPassthroughOcclusion.cpp  XrPassthroughOcclusionInput.cpp
Meta-OpenXR-SDK/Samples/XrSamples/XrSceneModel/Src/: SceneModelXr.cpp
Meta-OpenXR-SDK/Samples/XrSamples/XrSpaceWarp/Src/: XrSpaceWarp.c
Meta-OpenXR-SDK/Samples/XrSamples/XrSpatialAnchor/Src/: SpatialAnchorXr.cpp
Meta-OpenXR-SDK/Samples/XrSamples/XrVirtualKeyboard/: CMakeLists.txt
Meta-OpenXR-SDK/Samples/XrSamples/hello_xr/: CMakeLists.txt
Meta-OpenXR-SDK/Samples/XrSamples/hello_xr/Src/: CMakeLists.txt  HelloXr_NativeActivity.c  anag.c  anag.h  build.gradle  common.h  common_config.h  graphicsplugin_vulkan.cpp  jnipp.h  loader_init_data.cpp  loader_init_data.hpp  loader_logger.cpp  loader_logger.hpp  loader_platform.hpp  main.cpp  object_info.cpp  object_info.h  pch.h  platform_utils.hpp  platformdata.h  platformplugin_android.cpp  platformplugin_factory.cpp  vulkan.h  vulkan_core.h  xr_dependencies.h  xr_generated_dispatch_table_core.cpp  xr_generated_dispatch_table_core.h  xr_linear.h
Meta-OpenXR-SDK/Samples/XrSamples/hello_xr/android_resources/: helloxr-vk-24px.svg.license
Meta-OpenXR-SDK/Samples/helloxr/: CMakeLists.txt
Meta-OpenXR-SDK/Samples/helloxr/Projects/Android/: AndroidManifest.xml  build.gradle
Meta-OpenXR-SDK/Samples/helloxr/Src/: CMakeLists.txt  anag.c  common.h  exception_handling.hpp  extra_algorithms.h  graphicsapi.h  graphicsplugin.h  graphicsplugin_vulkan.cpp  hex_and_handles.h  jnipp.h  loader_init_data.cpp  loader_init_data.hpp  loader_logger.cpp  logger.cpp  openxr.h  openxr_platform.h  openxr_platform_defines.h  openxr_program.cpp  openxr_reflection.h  openxr_reflection_parent_structs.h  openxr_reflection_structs.h  options.h  platform_utils.hpp  platformplugin_android.cpp  platformplugin_factory.cpp  unique_asset.h  vulkan_debug_object_namer.hpp  vulkan_wrapper.cpp  vulkan_wrapper.h  xr_generated_dispatch_table_core.cpp  xr_generated_dispatch_table_core.h  xr_linear.h
Meta-OpenXR-SDK/helloxr/: CMakeLists.txt  build.gradle  check.h  exception_handling.hpp  filesystem_utils.cpp  logger.cpp  settings.gradle  vk_platform.h  vulkan_core.h
Meta-OpenXR-SDK/helloxr/Projects/Android/: AndroidManifest.xml  build.gradle  settings.gradle
Meta-OpenXR-SDK/helloxr/Src/: CMakeLists.txt  anag.c  anag.cpp  anag.h  check.h  common.h  egl_egl.h  egl_eglext.h  egl_eglext_angle.h  egl_eglplatform.h  egl_platform.h  exception_handling.h  extra_algorithms.h  filesystem_utils.cpp  filesystem_utils.h  frag.glsl  geometry.h  gles3_gl3.h  gles3_gl31.h  gles3_gl32.h  gles3_gl3ext.h  gles3_gl3platform.h  graphicsapi.h  graphicsplugin.h  graphicsplugin_factory.cpp  graphicsplugin_vulkan.cpp  header.h  hex_and_handles.h  jnipp.h  json_hpp.h  khr_khrplatform.h  loader_init_data.cpp  loader_init_data.h  loader_logger.cpp  loader_logger.h  loader_logger.hpp  logger.cpp  logger.h  main.cpp  meta_openxr_preview_extx1_event_channel.h  (+88 more)
Meta-OpenXR-SDK/helloxr/assets/: cathedral.mtl  chiku-nsfw-pose.mtl  chiku-sus-tetas-pose.mtl  minecraft-3d-map-big-village.mtl  minecraft-bastion.mtl  model_links.txt  monastery_of_batalha-night.mtl  naked_woman.mtl  neo_tokyo.mtl  plaza_night_time.mtl  pride-bonfie-by-tristy-artist.mtl  room_07.mtl  sexy-goblin.mtl
Meta-OpenXR-SDK/helloxr/src/: graphicsplugin_factory.cpp  jnipp.h  openxr_program.cpp  unique_asset.h  xr_generated_dispatch_table_core.cpp
OpenXR-SDK-Source/src/tests/hello_xr/: CMakeLists.txt  anag.c  build.gradle  check.h  graphicsplugin_factory.cpp  graphicsplugin_vulkan.cpp  logger.cpp  main.cpp  openxr_program.cpp  pch.h  platformdata.h  platformplugin_android.cpp  platformplugin_factory.cpp
OpenXR-SDK-Source/src/tests/list/: CMakeLists.txt
OpenXR-SDK-Source/src/tests/list_json/: CMakeLists.txt  list_json.cpp
OpenXR-SDK-Source/src/tests/loader_test/test_runtimes/: CMakeLists.txt
unc/havoc3d/havoc3d/: CMakeLists.txt  check_if_closed.cpp  check_if_closed.hpp  color_ids.cpp  color_ids.hpp  drawslice_gl.cpp  drawslice_gl.hpp  find_interior.cpp  find_interior.hpp  find_interior_slice.cpp  find_interior_slice.hpp  grad_utilities.hpp  havoc3d.dsp  havoc3d.dsw  line_distmesh.cpp  line_distmesh.hpp  line_distmesh_grad.cpp  line_distmesh_grad.hpp  pixel_error.cpp  pixel_error.hpp  pt_distmesh.cpp  pt_distmesh.hpp  pt_distmesh_grad.cpp  pt_distmesh_grad.hpp  queries.cpp  queries.hpp  readme.txt  sitecull.cpp  sitecull.hpp  tri_distmesh.cpp  tri_distmesh.hpp  tri_distmesh_grad.cpp  tri_distmesh_grad.hpp  voronoi_slice.cpp  voronoi_slice.hpp
(+602 files in other folders)
